# Programming-Paradigms

1_lab/: .gitignore  .~lock.отчет.odt#  CMakeLists.txt  README.md  docker_Command.txt  init-mongo.js  init-mongo.txt  отчет.odt
1_lab/1_task/imperativ/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp
1_lab/1_task/oop/: main1.cpp  main2.cpp  main3.cpp
1_lab/1_task/procedur/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp
1_lab/2_task/imperativ/: main1.cpp  main2.cpp
1_lab/2_task/oop/: main1.cpp  main2.cpp
1_lab/2_task/procedur/: main1.cpp  main2.cpp
1_lab/imperativ/: CMakeLists.txt  main2.cpp
1_lab/oop/: main1.cpp  main2.cpp
1_lab/procedur/: main2.cpp
1_lab/task2_experimental/oop/: main1.cpp
